employee security Group CRUD & security Group Management

--- a/framework/common/config/general.properties
+++ b/framework/common/config/general.properties
@@ -74,30 +74,30 @@ partner.trackingCodeId.default=
 usps.address.match=(^.*?p[\\. ]*o[\\. ]*box.*$)|(^.*?post.*?office.*?box.*$)|((^|(^.*? ))r[\\. ]*r[\\. ]*(( +)|([0-9#]+)).*$)|(^.*?rural.*?route.*$)
 
 # -- general default 'fromEmailAddress' can be overridden in: EmailTemplateSetting
-defaultFromEmailAddress=ofbiztest@example.com
+defaultFromEmailAddress=sylee@universal-steel.com
 
 # -- The default domainname used in the notification emails links
-# as 'baseUrl' and 'baseSecureUrl' are set in the url.properties file. 
+# as 'baseUrl' and 'baseSecureUrl' are set in the url.properties file.
 
 # -- mail notifications enabled (Y|N)
-mail.notifications.enabled=N
+mail.notifications.enabled=Y
 
 # -- redirect all mail notifications to this address for testing
 #mail.notifications.redirectTo=
 
 # -- the default mail server to use
-mail.smtp.relay.host=localhost
+mail.smtp.relay.host=outlook.office365.com
 
 # -- SMTP Auth settings
-#mail.smtp.auth.user=
-#mail.smtp.auth.password=
+mail.smtp.auth.user=sylee@universal-steel.com
+mail.smtp.auth.password=Usp2019!
 
 # -- Additional Required Fields needed for Gmail and other non traditional smtp servers
 # -- These added fields also work for Yahoo business mail for instance
 # -- Gmail smtp port can be either 465 or 587
-#mail.smtp.port=465
+mail.smtp.port=587
 # -- Gmail requires StartTLS
-#mail.smtp.starttls.enable=true
+mail.smtp.starttls.enable=true
 
 # -- Gmail requires a JSSE socket factory, the following socketFactory settings will override JavaMail's default socketFactory settings
 # -- Port needs to be the same as mail.smtp.port
@@ -107,10 +107,10 @@ mail.smtp.relay.host=localhost
 #mail.smtp.socketFactory.fallback=false
 
 # -- how the address are matched with the CRM addresses
-mail.address.caseInsensitive=N
+mail.address.caseInsensitive=Y
 
 # -- debug SMTP mail option enabled (Y|N)
-mail.debug.on=N
+mail.debug.on=Y
 
 # -- if some addresses fail the SMTP check using the RCPT TO: command then setting this property to false will abort sending the message
 #    to any recipients valid or not
